# Generative_AI

./: .gitignore  pyproject.toml  requirements.txt
AI-Agents/: agent_with_anthropic.py
Advanced_RAG/: 01_Hybrid_Search.ipynb
Agent-Huggingface/: 01_tools.ipynb
LLM-Huggingface/: 01_transformer_pipeline.ipynb
Langchain-Langgraph/: 01_text_loader.ipynb
RAG_Techniques/: 02_RAG_with_CSV_Files.ipynb  03_Reliable_RAG.ipynb
Strand-Agent/: 01_strand_agent.ipynb
